Add tutorial list items to remove undefined status

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
       </label>
       <input type="submit" value="Add to list" class="submit">
     </form>
-    <ul id="list" class="flex">List Items Go Here</ul>
+    <ul id="list" class="flex">
+      <li>Try creating an item</li>
+      <li>Click once check an item</li>
+      <li>Then again to cross out an item</li>
+      <li>Then one more time to delete an item</li>
+    </ul>
 
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
       <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
