Edit content of pre-made list items

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <input type="submit" value="Add to list" class="submit">
     </form>
     <ul id="list" class="flex">
-      <li>Try creating an item</li>
-      <li>Click once check an item</li>
+      <li>Create an item above</li>
+      <li>Click once to check an item</li>
       <li>Then again to cross out an item</li>
       <li>Then one more time to delete an item</li>
     </ul>
