--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <link rel="stylesheet" href="css/normalize.css">
-      <link rel="stylesheet" href="css/main.css">
+      <link id="1" rel="stylesheet" href="sass/sassy.css">
+      <link id="2" rel="stylesheet" href="sass/sassy2.css">
   </head>
   <body class="flex">
-
     <form class="flex">
       <label class="flex">
         <h1>Do this #ish:</h1>
@@ -18,13 +18,14 @@
       </label>
       <input type="submit" value="Add to list" class="submit">
     </form>
+    <button type="button" id="toggler">switch da themes</button>
     <ul id="list" class="flex">
     </ul>
-
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
       <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
       <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
       <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
       <script src="js/main.js"></script>
+  </script>
   </body>
 </html>
