Remove auto focus on mobile safari, thx kevin and dexte for the theme swapping functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title>To Do App</title>
       <meta name="description" content="Experimental To Do App">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
       <link rel="stylesheet" href="css/normalize.css">
       <link id="1" rel="stylesheet" href="sass/sassy.css">
