--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8">
-      <title>To Do App</title>
-      <meta name="description" content="Experimental To Do App">
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta charset="utf-8">
+    <title>To Do App</title>
+    <meta name="description" content="Experimental To Do App">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-      <link rel="stylesheet" href="css/normalize.css">
-      <link id="1" rel="stylesheet" href="sass/sassy.css">
-      <link id="2" rel="stylesheet" href="sass/sassy2.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link id="1" rel="stylesheet" href="sass/sassy.css">
+    <link id="2" rel="stylesheet" href="sass/sassy2.css">
+
+    <link rel="apple-touch-icon" href="apple-touch-icon-57x57.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png"/>
   </head>
   <body class="flex">
     <form class="flex">
