--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link id="1" rel="stylesheet" href="sass/sassy.css">
     <link id="2" rel="stylesheet" href="sass/sassy2.css">
 
+    <link rel="icon" type="image/png" href="favicon.ico">
+
     <link rel="apple-touch-icon" href="apple-touch-icon-57x57.png"/>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png"/>
     <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png"/>
