--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>To Do App</title>
     <meta name="description" content="Experimental To Do App">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
 
     <link rel="stylesheet" href="css/normalize.css">
     <link id="1" rel="stylesheet" href="sass/sassy.css">
